[project]
name = "dp-workflow-ops"
version = "0.1.2"
description = "Common libraries and utility functions for working with Skyss projects in dp-workflows"
readme = "README.md"
authors = [
    { name = "John Erik Sloper", email = "john.erik.sloper@skyss.no" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "delta-spark>=4.0.0",
    "pyspark>=4.0.1",
    "pytest>=8.4.2",
    "databricks-sdk[notebook]>=0.65.0",
    "ipykernel>=6.30.1",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001", "PLE1205"]
